--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://th.bing.com/th/id/OIP.iFqjFl2aKibQzpElDAz7TAHaEc?w=278&h=180&c=7&r=0&o=5&pid=1.7") top center;
+  background: url("https://www.google.com/imgres?q=fond%20noir&imgurl=https%3A%2F%2Fst4.depositphotos.com%2F21149286%2F23042%2Fi%2F450%2Fdepositphotos_230425778-stock-photo-stars-night-sky-background-texture.jpg&imgrefurl=https%3A%2F%2Fdepositphotos.com%2Ffr%2Fphotos%2Ffond-noir-%25C3%25A9toil%25C3%25A9.html&docid=cIAF3XAmz6vL0M&tbnid=XOxm3Gx337OI9M&vet=12ahUKEwjdgryYnveGAxW8VaQEHRmkCy4QM3oECBUQAA..i&w=600&h=400&hcb=2&ved=2ahUKEwjdgryYnveGAxW8VaQEHRmkCy4QM3oECBUQAA") top center;
   background-size: cover;
 }
 
